connect mongoDB and url in env file

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ JWT_SECRET=Internsaathi123
 CLOUDINARY_CLOUD_NAME= dtiinogfu
 CLOUDINARY_API_KEY= 562733872976854
 CLOUDINARY_API_SECRET= 7SdxuAtWVKYXcmXu2I5zd3xL3iU
+MONGO_URI=mongodb+srv://internsaathi_db:%40Internsaathi12@cluster0.wa76e5d.mongodb.net/Internsaathi?retryWrites=true&w=majority
